--- a/Assignments/Assignment Grid RWD/Grid RWD Basic 85/styles.css
+++ b/Assignments/Assignment Grid RWD/Grid RWD Basic 85/styles.css
@@ -35,16 +35,14 @@ ul li {
 /*--------------------------- Header--------------------------- */
 .row1 {
   background-color: #333333;
-  overflow: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(480px, 960px));
+  place-content: center;
 }
 header {
-  width: 960px;
-  margin: 0 auto;
   padding: 20px 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(480px,1fr));
 }
 /*--------------- Title----------------- */
 #title a {
@@ -52,7 +50,6 @@ header {
 }
 /*--------------- Nav bar----------------- */
 header nav {
-  margin: 10px 0 0 0;
   padding: 20px 0;
   color: #c0bab6;
   background-color: #232323;
@@ -60,13 +57,12 @@ header nav {
 header nav ul {
   list-style-type: none;
   text-transform: uppercase;
-  padding: 0 20px;
-  display: flex;
-  justify-content: space-between;
+  display:grid;
+  grid-template-columns: repeat(auto-fit,minmax(85px,1fr));
+  place-items: center;
 }
 header nav ul li {
   list-style-type: none;
-  margin-right: 25px;
 }
 nav a {
   text-decoration: none;
@@ -74,8 +70,9 @@ nav a {
 }
 /*==========================================Container==========================================*/
 .container {
-  width: 960px;
-  margin: 0 auto;
+  display:grid;
+  grid-template-columns: repeat(auto-fit,minmax(600px,960px));
+  place-content: center;
   padding: 30px 0;
   overflow: auto;
 }
@@ -95,17 +92,17 @@ nav a {
 .homepage {
   width: 100%;
   line-height: 1.6em;
-  overflow: auto;
 }
 /*---------------Section 2 ----------------- */
 .section2 {
-  overflow: auto;
   margin-bottom: 50px;
 }
 .section2 article ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display:grid;
+  grid-template-columns: repeat(4,auto);
+  place-items: center;
+  column-gap: 10px;
+  
 }
 .section2 article figure ul li {
   margin-bottom: 20px;
@@ -131,24 +128,24 @@ nav a {
 /*---------------Section 3 ----------------- */
 .section3 {
   color: #979797;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+  grid-gap:20px;
+
 }
 .section3 article {
   width: 225px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: auto 1fr;
 }
 .section3 article figure img {
+  grid-area:1/1;
   height: 32px;
   width: 32px;
   flex-grow: 1;
 }
 .section3 article strong {
+  grid-area:1/2;
   margin: 8px 0 0 10px;
   font-size: 14px;
   font-weight: bold;
@@ -156,57 +153,46 @@ nav a {
   flex-grow: 2;
 }
 .section3 article p {
-  width:100%;
+  grid-area:2/1/2/3;
   padding-top: 5px;
 }
 .readmore {
-  width: 100%;
+  grid-area:3/1/3/3;
   text-align: right;
 }
 .readmore a {
   color: #ff9900;
   background-color: #ffffff;
 }
-/* ============================================= */
-.spacer {
-  height: 30px;
-  width: 100%;
-}
-/* ============================================= */
 
 /* =====================Footer======================== */
 .row3 {
   background-color: #232323;
+  display:grid;
+  grid-template-columns: repeat(auto-fit,minmax(100px,960px));
+  place-content: center;
 }
 footer {
-  width: 960px;
-  margin: 0 auto;
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto;
+  /* place-content:center; */
   justify-content: space-between;
 }
 footer p {
   font-size: 13px;
-}
-#left_footer {
-  float: left;
   padding: 20px 0;
 }
-#right_footer {
-  float: right;
-  padding: 20px 0;
-}
-
 /* ---------------------------------Media queries---------------------------- */
 /* ---------------------------------Mobile---------------------------- */
 @media only screen and (max-width: 600px) {
   * {
     box-sizing: border-box;
   }
+  .row1{
+    display:block;
+  }
   header {
-    width: 100%;
-    align-items: center;
-    flex-direction: column;
-    padding-bottom: 0;
+    grid-template-columns: auto;
   }
   #title {
     text-align: center;
@@ -216,14 +202,14 @@ footer p {
     font-size: 2em;
   }
   header nav {
-    width: 100%;
     padding: 0;
   }
   header nav ul {
     padding: 0;
-    flex-direction: column;
+    grid-template-columns: auto;
   }
   header nav ul li {
+    width:100%;
     padding: 10px;
     margin: 5px;
     border: 1px solid white;
@@ -232,6 +218,7 @@ footer p {
   }
 
   .container {
+    display:block;
     width: 100%;
     padding: 30px 10px;
   }
@@ -246,32 +233,24 @@ footer p {
     margin-bottom: 30px;
   }
   .section2 article ul {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    grid-template-columns: auto;
   }
-  .section2 article figure ul li {
-    margin-bottom: 20px;
+  .section2 article figcaption{
+    text-align:center;
   }
   .section2 article figcaption a {
-    color: #ff9900;
-    background-color: #ffffff;
     font-size: 0.8em;
-  }
-  .section3 {
-    flex-direction: column;
   }
   .section3 article {
     width: 100%;
   }
-  .spacer {
-    display: none;
-  }
 
   footer {
     width: 100%;
-    flex-direction: column;
-    padding: 010px;
+    grid-template-columns: auto;
+    place-content: center;
+    place-items: center;
+    padding: 0 10px;
   }
 }
 /* ---------------------------------Tablets---------------------------- */
@@ -305,6 +284,7 @@ footer p {
   }
 
   .container {
+    display:block;
     width: 100%;
     padding: 30px 30px;
   }
@@ -317,24 +297,17 @@ footer p {
   .section2 {
     width: 100%;
     margin-bottom: 30px;
+    
   }
-  .section2 article figure ul li {
-    width: 50%;
-    padding:0 50px;
+  .section2 article figure ul {
+    grid-template-columns: auto auto;
   }
   .section2 article figcaption {
     text-align:center;
   }
-  .section3 article {
-    width: 50%;
-    padding:10px;
-  }
-  .spacer {
-    display: none;
-  }
-
-  footer {
-    width: 100%;
+  footer{
     padding: 0 30px;
   }
+
+
 }
