--- a/HTML/RWD/Template_responsive_grid/Template2.css
+++ b/HTML/RWD/Template_responsive_grid/Template2.css
@@ -1,28 +1,34 @@
-
-/*.row1 {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  text-align: left;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  font-size: 13px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: #919191;
+}
+.row1 {
   background-color: #333333;
-  overflow: auto;
 }
 header {
-  display: flex;
-  flex-flow: column wrap;
   width: 960px;
   margin: 0 auto;
   background-color: #333;
   padding: 20px 0;
 }
-header h1 {
+header #hgroup {
+  display: grid;
+  grid-template-rows: auto auto;
+}
+header #hgroup h1 {
   font-size: 36px;
   font-weight: normal;
   font-style: normal;
   text-transform: none;
   line-height: normal;
 }
-header h2 {
+header #hgroup h2 {
   font-size: 13px;
   color: #c0bab6;
   font-weight: normal;
@@ -36,27 +42,26 @@ a {
   text-decoration: none;
 }
 header nav {
-  /* width: 100%; 
+  /* width: 100%; */
   padding: 20px 0;
   margin: 20px 0;
   color: #c0bab6;
   background-color: #232323;
   clear: both;
   border-radius: 30px;
+  /* display: grid; */
 }
 header nav ul {
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
   justify-content: space-evenly;
+  text-align: center;
   list-style: none;
   padding: 0 20px;
 }
 header nav ul li {
   text-transform: uppercase;
   font-size: 13px;
-  /* display: flex; 
   margin-right: 25px;
 }
 header nav ul li a {
@@ -65,12 +70,6 @@ header nav ul li a {
 header nav ul li a:hover {
   font-size: 20px;
   color: #ff9900;
-}
-.row2 {
-  width: 100%;
-  color: #979797;
-  background-color: #ffffff;
-  overflow: auto;
 }
 .row2 {
   color: #979797;
@@ -90,18 +89,14 @@ header nav ul li a:hover {
   width: 100%;
   margin: 0 0 30px 0;
   padding: 0;
-  overflow: auto;
 }
 .one_quarter {
   width: 225px;
-  /* margin: 0 20px 0 0; 
+  margin: 0 20px 0 0;
 }
-/* #container {
-  display: flex;
-} 
 #container #homepage #latest {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
 }
 #container #homepage #latest figure {
   padding: 4px;
@@ -111,6 +106,8 @@ header nav ul li a:hover {
   clear: both;
 }
 img {
+  margin: 0;
+  padding: 0;
   border: none;
   line-height: normal;
   vertical-align: middle;
@@ -122,6 +119,7 @@ img {
   background-color: #eeeeee;
   text-transform: uppercase;
   text-align: center;
+  margin: 0;
 }
 .lastbox {
   margin-right: 0;
@@ -133,22 +131,27 @@ img {
 }
 #container .shout p {
   font-size: 20px;
+  margin: 0;
+  padding: 0;
   line-height: 0.8cm;
 }
-/* #container #content {
+#container #content {
   width: 630px;
-} 
+  display: grid;
+  grid-template-columns: auto auto;
+  column-gap: 50px;
+  overflow: auto;
+}
 #container .last {
   margin-right: 0;
-}
-#container #services {
-  display: flex;
-  flex-wrap: wrap;
 }
 #container #content #services ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  width: 100%;
+  display: grid;
+  grid-template-rows: auto auto;
 }
 #container #content #services ul li {
   width: 100%;
@@ -156,10 +159,6 @@ img {
 }
 .clear {
   clear: both;
-}
-#container #content #services ul li article figure {
-  display: flex;
-  flex-wrap: wrap;
 }
 #container #content #services ul li article figure img {
   width: 180px;
@@ -180,8 +179,14 @@ img {
   line-height: 0.8cm;
   text-transform: uppercase;
 }
+#container #content #services ul li article figure {
+  display: grid;
+  grid-template-columns: auto auto;
+  column-gap: 10px;
+}
 .row2 a {
   color: #ff9900;
+  overflow: auto;
 }
 #container .more {
   text-align: right;
@@ -192,10 +197,11 @@ img {
 #container #content #services ul li.last {
   margin-bottom: 0;
 }
+#container .last {
+  margin: 0;
+}
 #content {
-  line-height: 0.7cm;
-  display: flex;
-  flex-wrap: wrap;
+  line-height: 0.8cm;
 }
 aside {
   margin: 0;
@@ -203,9 +209,6 @@ aside {
 }
 #container #right_column {
   width: 280px;
-}
-.row2 a {
-  background-color: white;
 }
 #container #right_column h2.title {
   margin-bottom: 15px;
@@ -230,6 +233,7 @@ aside {
   padding: 0;
 }
 #container #right_column nav a {
+  margin: 0;
   padding: 5px 10px 5px 20px;
   color: #666666;
   background: url("../Template/template_images/orange_file.gif") no-repeat 10px
@@ -241,11 +245,11 @@ aside {
 #container #right_column nav ul li a:hover {
   color: orange;
 }
+
 .row3 {
   color: #919191;
   background-color: #232323;
   line-height: 0.5cm;
-  overflow: auto;
 }
 .row3 a {
   color: #919191;
@@ -257,41 +261,41 @@ footer {
   overflow: auto;
 }
 #footer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   width: 960px;
   margin: 0 auto;
   padding: 20px 0;
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: space-between;
 }
+#footer p {
+  margin: 0;
+  padding: 0;
+}
+
 @media only screen and (min-width: 0px) and (max-width: 450px) {
   * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
   }
-  header {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  header nav {
+  #header {
     width: 100%;
   }
-  header nav ul {
-    display: flex;
-    flex-direction: column;
+  #header nav {
+    width: 100%;
   }
   header nav ul li {
     width: 100%;
-    background: red;
+    display: grid;
+    grid-template-rows: auto auto auto auto auto;
+    grid-column: 1 / 6;
     padding: 10px;
-    border-bottom: 2px solid white;
   }
   header nav ul li a {
+    padding: 10px;
     background-color: red;
-    color: black;
-    font-weight: bold;
+    border-bottom: 1px solid white;
   }
   #container {
     width: 100%;
@@ -300,8 +304,67 @@ footer {
     width: 100%;
   }
   #container #homepage #latest {
-    display: flex;
-    flex-direction: column;
+    width: 100%;
+    grid-template-columns: none;
+  }
+  #container #homepage #latest .one_quarter {
+    width: 100%;
+  }
+  #container #homepage #latest .one_quarter figure {
+    width: 100%;
+  }
+  #container #homepage #latest .one_quarter figure img {
+    width: 100%;
+  }
+  #container #homepage #latest .one_quarter figure figcaption {
+    width: 100%;
+  }
+  #container #content #services ul li article figure {
+    grid-template-columns: none;
+  }
+  #container #content {
+    width: 100%;
+    grid-template-columns: none;
+  }
+  #container #content #services {
+    width: 100%;
+  }
+  #container #content #services ul {
+    width: 100%;
+    grid-template-rows: none;
+  }
+  #container #content #services ul li {
+    width: 100%;
+  }
+  #container #right_column {
+    width: 100%;
+  }
+  #footer {
+    width: 100%;
+
+    justify-content: space-between;
+  }
+}
+@media only screen and (min-width: 451px) and (max-width: 768px) {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  #header {
+    width: 100%;
+  }
+  #header nav {
+    width: 100%;
+  }
+
+  #container {
+    width: 100%;
+  }
+  #container #homepage {
+    width: 100%;
+  }
+  #container #homepage #latest {
     width: 100%;
   }
   #container #homepage #latest .one_quarter {
@@ -316,87 +379,11 @@ footer {
   #container #homepage #latest .one_quarter figure figcaption {
     width: 100%;
   }
-  #content {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
-  #container #content #services {
-    width: 100%;
-  }
-  #container #content #services ul {
-    width: 100%;
-  }
-  #container #content #services ul li {
-    width: 100%;
-  }
-  #container #right_column {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-  }
-  #container #right_column ul {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-  }
-  #footer {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-}
-@media only screen and (min-width: 451px) and (max-width: 768px) {
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  header {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-  header nav {
-    width: 100%;
-  }
-  #container {
-    width: 100%;
-  }
-  #container #homepage {
-    width: 100%;
-  }
-  #container #homepage #latest {
-    display: flex;
-    width: 100%;
-  }
-  #container #homepage #latest .one_quarter {
-    width: 100%;
-  }
-  #container #homepage #latest .one_quarter figure figcaption {
-    width: 100%;
-  }
-  /* #container #homepage #latest .one_quarter {
-    width: 100%;
+  /* #container #content #services ul li article figure {
+    grid-template-columns: none;
   } */
-/* #container #homepage #latest .one_quarter figure {
+  #container #content {
     width: 100%;
-  }
-  #container #homepage #latest .one_quarter figure img {
-    width: 100%;
-  }
-  #container #homepage #latest .one_quarter figure figcaption {
-    width: 100%;
-  } 
-  #content {
-    display: flex;
-    flex-wrap: wrap;
-    /* flex-direction: column; 
   }
   #container #content #services {
     width: 100%;
@@ -409,32 +396,20 @@ footer {
   }
   #container #right_column {
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-  }
-  #container #right_column ul {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
   }
   #footer {
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
   }
 }
-/*#header {
+/* #header {
   display: block;
   width: 960px;
   padding: 20px 0;
   margin: 0 auto;
   overflow: auto;
 }
- #header nav {
+#header nav {
   display: block;
   float: right;
   margin: 10px 0 0 0;
@@ -455,8 +430,19 @@ nav ul {
   display: inline-block;
   text-align: center;
 }
-figure {
-  padding-left: 0;
+@media only screen and (max-width: 768px) {
+  #header {
+    width: 100%;
+    background-color: red;
+  }
+  #header nav ul li {
+    display: block;
+    border-bottom: 3px solid white;
+    padding: 10px;
+  }
+  #header nav {
+    width: 100%;
+  }
 }
 * {
   padding: 0;
@@ -514,8 +500,8 @@ a {
 }
 /* #header nav ul li.last {
   margin-right: 0; 
-}
-.row2 {
+}*/
+/* .row2 {
   color: #979797;
   background-color: #ffffff;
 }
@@ -582,7 +568,6 @@ img {
   text-align: center;
   border-bottom: 1px solid #dedede;
 }
-
 #container .shout p {
   font-size: 20px;
   margin: 0;
@@ -727,175 +712,4 @@ footer {
 }
 .f1_right {
   float: right;
-}
-[class*="col-"] {
-  width: 100%;
-}
-@media only screen and (min-width: 0px) and (max-width: 450px) {
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  #header {
-    width: 100%;
-    background-color: red;
-  }
-  #header nav {
-    width: 100%;
-  }
-  #header nav ul li {
-    display: block;
-    width: 100%;
-    border-bottom: 3px solid white;
-    padding: 10px;
-  }
-  #container {
-    width: 100%;
-    background-color: blue;
-  }
-  #container #content {
-    width: 100%;
-  }
-  .one_quarter {
-    float: none;
-    width: 98%;
-  }
-  #container #homepage #latest figure {
-    margin-left: 15px;
-  }
-  #container #homepage #latest figure img {
-    width: 100%;
-  }
-  #container #homepage #latest figure figcaption {
-    width: 100%;
-    text-align: center;
-  }
-  .shout p {
-    display: block;
-    width: 100%;
-    background: blue;
-    text-align: center;
-    font-weight: bold;
-  }
-   #container #content #services ul li article figure img{
-
-  } 
-  #content #services ul li {
-    width: 100%;
-  }
-  #container #content #services ul li .clear figure img {
-    width: 100%;
-    background: green;
-  }
-  #container #content #services ul li article figure figcaption {
-    width: 98%;
-    text-align: center;
-  }
-  #container #right_column {
-    float: left;
-    width: 100%;
-    text-align: center;
-  }
-   #container #right_column h2 { 
-    width: 100%;
-    display: block;
-    background: red;
-  }
-  #container #right_column nav ul li {
-    width: 100%;
-    background-color: red;
-  }
-  #footer {
-    width: 100%;
-    display: block;
-  }
-}
-@media only screen and (min-width: 451px) and (max-width: 768px) {
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  #header {
-    width: 90%;
-  }
-  #header nav {
-    width: 100%;
-  }
-  #header nav ul {
-    text-align: center;
-  }
-  #container {
-    width: 100%;
-    background-color: blue;
-  }
-  #container #homepage #latest article {
-    margin-top: 10px;
-  }
-  .one_quarter {
-    display: block;
-    width: 47%;
-  }
-  #container #homepage #latest figure {
-    margin-left: 15px;
-  }
-  #container #homepage #latest figure img {
-    width: 100%;
-  }
-  #container #homepage #latest figure figcaption {
-    text-align: center;
-  }
-  #container #content #services ul li .clear figure img {
-    margin-left: 15px;
-  }
-  #container #right_column {
-    float: left;
-    width: 100%;
-    text-align: center;
-  }
-  #footer {
-    width: 100%;
-    display: block;
-  }
-}
-@media only screen and (min-width: 769px) and (max-width: 1024px) {
-  #header {
-    width: 90%;
-  }
-  #header nav {
-    width: 95%;
-    text-align: center;
-  }
-  #container {
-    width: 100%;
-    background-color: blue;
-  }
-  #container #homepage #latest article {
-    margin-top: 10px;
-  }
-  .one_quarter {
-    margin: 10px;
-    display: block;
-    width: 23%;
-  }
-  #container #homepage #latest figure {
-    margin-left: 15px;
-  }
-  #container #homepage #latest figure img {
-    width: 100%;
-  }
-  #container #homepage #latest figure figcaption {
-    text-align: center;
-  }
-  #container #content #services ul li .clear figure img {
-    margin-left: 15px;
-  }
-  #container #right_column {
-    margin-right: 20px;
-    text-align: center;
-  }
-  #footer {
-    width: 100%;
-  }
 } */
