--- a/Assignments/Assignment Grid RWD/Grid RWD Basic 86/styles.css
+++ b/Assignments/Assignment Grid RWD/Grid RWD Basic 86/styles.css
@@ -34,16 +34,14 @@ ul li {
 /*--------------------------- Header--------------------------- */
 .row1 {
   background-color: #333333;
-  overflow: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(480px, 960px));
+  place-content: center;
 }
 header {
-  width: 960px;
-  margin: 0 auto;
   padding: 20px 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(480px,1fr));
 }
 /*--------------- Title----------------- */
 #title a {
@@ -51,7 +49,6 @@ header {
 }
 /*--------------- Nav bar----------------- */
 header nav {
-  margin: 10px 0 0 0;
   padding: 20px 0;
   color: #c0bab6;
   background-color: #232323;
@@ -59,14 +56,9 @@ header nav {
 header nav ul {
   list-style-type: none;
   text-transform: uppercase;
-  padding: 0 40px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-header nav ul li {
-  margin-right: 25px;
+  display:grid;
+  grid-template-columns: repeat(auto-fit,minmax(85px,1fr));
+  place-items: center;
 }
 nav a {
   text-decoration: none;
@@ -74,20 +66,17 @@ nav a {
 }
 /*==========================================Container==========================================*/
 .container {
-  width: 960px;
+  display:grid;
+  grid-template-columns: repeat(auto-fit,minmax(600px,960px));
+  place-content: center;
   padding: 30px 0;
-  margin: 0 auto;
-  overflow: auto;
 }
 /*==========================================section 1==========================================*/
 .section1 {
-  overflow: auto;
-  width: 100%;
+  /* width: 100%; */
   margin-bottom: 50px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: auto auto;
 }
 .section1 figure {
   order: 2;
@@ -103,10 +92,6 @@ nav a {
   background-color: #dedede;
   line-height: 1.6em;
   padding: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
 }
 .section1 figcaption strong {
   font-size: 42px;
@@ -132,23 +117,17 @@ nav a {
 /*==========================================Homepage==========================================*/
 .homepage {
   width: 100%;
-  overflow: auto;
 }
 /*==========================================section 2==========================================*/
 .section2 {
   line-height: 1.6em;
   margin-bottom: 50px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+  column-gap: 20px;
 }
 .section2 article {
-  width: 300px;
   color: #979797;
-}
-.section2 #article3 {
-  margin-right: 0px;
 }
 .section2 article h2 {
   font-size: 14px;
@@ -159,7 +138,6 @@ nav a {
 .section2 article img {
   height:80px;
   width:80px;
-  float: left;
   padding: 4px;
   margin: 0 10px 10px 0;
   line-height: normal;
@@ -168,19 +146,26 @@ nav a {
 /*==========================================section 3==========================================*/
 .section3 {
   margin-bottom: 50px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(225px,1fr));
+  column-gap: 20px;
 }
 .section3 article {
-  width: 225px;
+  /* width: 225px; */
   color: #919191;
+  display:grid;
+  place-items: center;
+  /* place-content: center; */
+  
 }
 .section3 article figure img {
   border: 1px solid #dedede;
   padding: 4px;
   margin-bottom: 10px;
+}
+.section3 article figcaption{
+  display:grid;
+  place-items:center;
 }
 .section3 article figcaption h2 {
   font-size: 14px;
@@ -191,27 +176,24 @@ nav a {
 .section3 article figcaption p {
   margin: 13px 0;
   line-height: 1.6em;
+  text-align:justify;
 }
 /*==========================================Footer==========================================*/
 /* =====================Footer======================== */
 .row3 {
   background-color: #232323;
+  display:grid;
+  grid-template-columns: repeat(auto-fit,minmax(100px,960px));
+  place-content: center;
 }
 footer {
-  width: 960px;
-  margin: 0 auto;
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto;
+  /* place-content:center; */
   justify-content: space-between;
 }
 footer p {
   font-size: 13px;
-}
-#left_footer {
-  /* float:left; */
-  padding: 20px 0;
-}
-#right_footer {
-  /* float:right; */
   padding: 20px 0;
 }
 /* ---------------------------------Media queries---------------------------- */
@@ -220,11 +202,11 @@ footer p {
   * {
     box-sizing: border-box;
   }
+  .row1{
+    display:block;
+  }
   header {
-    width: 100%;
-    align-items: center;
-    flex-direction: column;
-    padding-bottom: 0;
+    grid-template-columns: auto;
   }
   #title {
     text-align: center;
@@ -234,31 +216,28 @@ footer p {
     font-size: 2em;
   }
   header nav {
-    width: 100%;
     padding: 0;
   }
   header nav ul {
     padding: 0;
-    margin: 0;
-    flex-direction: column;
+    grid-template-columns: auto;
   }
   header nav ul li {
-    width: 100%;
+    width:100%;
     padding: 10px;
-    margin-bottom: 5px;
+    margin: 5px;
     border: 1px solid white;
     justify-content: center;
     text-align: center;
   }
-
   .container {
+    display:block;
     width: 100%;
     padding: 30px 10px 0 10px;
   }
   .section1 {
     width: 100%;
-    flex-direction: column;
-    align-items: center;
+    grid-template-columns: auto;
   }
   .section1 figure {
     width: 100%;
@@ -276,50 +255,33 @@ footer p {
     margin:0;
   }
   .section2 {
-    width: 100%;
-    margin-bottom: 10px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* padding:0 10px; */
+    /* width: 100%; */
   }
   .section2 article{
-      width:100%;
-      display:flex;
-      flex-wrap: wrap;
-      flex-direction: column;
-      justify-items: center;
-      margin-bottom:20px;
-      text-align:center;
+    /* width:100%; */
+    /* text-align:center; */
   }
   .section2 article figure{
     width:100%;
     height:auto;
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: center;
-    align-items:center;
   }
-  .section2 article img{
-      float:none;
-      margin:0;
+  .section2 article figure p{
+    width:100%;
   }
   .section3 {
     width: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-    text-align:center;
+    row-gap:20px;
+    grid-template-columns: auto;
   }
-  .section3 article{
-      width:100%;
+  .hompage .section3 article{
+      width:225px;
   }
   footer {
     width: 100%;
-    flex-direction: column;
+    grid-template-columns: auto;
+    place-content: center;
+    place-items: center;
     padding: 0 10px;
-    text-align:center;
   }
 }
 /* ---------------------------------Tablets---------------------------- */
@@ -342,7 +304,7 @@ footer p {
   }
   header nav {
     width: 100%;
-    padding: 10px 50px;
+    padding: 0 50px;
   }
   header nav ul {
     padding: 0;
@@ -353,16 +315,19 @@ footer p {
   }
 
   .container {
+    display:block;
     width: 100%;
     padding: 30px 30px;
   }
   .section1 {
     width: 100%;
-    flex-direction: column;
-    align-items: center;
+    display:grid;
+    grid-template-columns: auto ;
+    
   }
   .section1 figure {
     width: 100%;
+    height:atuo;
     order:1;
   }
   .section1 figcaption {
@@ -379,32 +344,27 @@ footer p {
   .section2 {
     width: 100%;
     margin-bottom: 10px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    grid-template-columns: auto;
+    grid-gap:20px;
     /* padding:0 10px; */
   }
   .section2 article{
       width:100%;
-      display:flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: center;
-      /* padding:0 50px; */
-      margin-bottom:20px;
-      /* text-align:center; */
+      display: grid;
+      grid-template-columns: auto auto;
+      /* place-items: center; */
+      place-content: center;
+      column-gap: 20px;
+      
   }
   .section2 article h2{
-    text-align:center;
+  /* text-align:center; */
+    grid-area: 1/1/1/3;
     width:100%;
   }
   .section2 article figure{
     width:20%;
     height:auto;
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: center ;
-    align-items:center;
   }
   .section2 article img{
       float:none;
@@ -414,18 +374,14 @@ footer p {
     width:80%;
   }
   .section2 article .readmore{
+    grid-area:3/1/3/3;
     width:100%;
   }
   .section3 {
-    width: 100%;
-    /* flex-direction: column; */
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-    text-align:center;
+    grid-template-columns: auto auto;
   }
   .section3 article{
-      width:50%;
+      width:100%;
       padding:20px;
   }
   footer {
