--- a/Assignments/Assignment Grid RWD/Grid RWD Basic 87/styles.css
+++ b/Assignments/Assignment Grid RWD/Grid RWD Basic 87/styles.css
@@ -33,80 +33,65 @@ ul li{
     width:100%;
 }
 /*--------------------------- Header--------------------------- */
-.row1, .row3{
-    background-color: #333333;
-    overflow:auto;
-}
-header{
-    width:960px;
-    margin:0 auto;
-    padding:20px 0;
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: space-between;
-    align-items: center;
 
-}
-/*--------------- Title----------------- */
-#title{
-    flex-grow:1;
-}
-#title a{
-    color:#C0BAB6;   
-}
-/*--------------- Nav bar----------------- */
-header nav{
-    flex-grow:2;
-    padding:20px 0;
-    color: #C0BAB6;
-    background-color: #232323
-}
-header nav ul{
+.row1 {
+    background-color: #333333;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(480px, 960px));
+    place-content: center;
+  }
+  header {
+    padding: 20px 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(480px,1fr));
+  }
+  /*--------------- Title----------------- */
+  #title a {
+    color: #c0bab6;
+  }
+  /*--------------- Nav bar----------------- */
+  header nav {
+    padding: 20px 0;
+    color: #c0bab6;
+    background-color: #232323;
+  }
+  header nav ul {
     list-style-type: none;
-    text-transform:uppercase;
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: space-evenly;
-    align-items: center;
-}
-header nav ul li{
-    list-style-type: none;
-}
-nav a{
-    text-decoration:none;
-    color:#C0BAB6;
-}
+    text-transform: uppercase;
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(85px,1fr));
+    place-items: center;
+  }
+  nav a {
+    text-decoration: none;
+    color: #c0bab6;
+  }
 /*--------------------------- Home Page--------------------------- */
 .container{
-    margin:0 auto;
     padding:30px 0;
-    width:960px;
     box-sizing: border-box;
-    overflow:auto;
     color: #979797;
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: space-between;
+    width:960px;
+    margin:0 auto;
+    display:grid;
+    /* grid-template-columns:repeat(auto-fit,minmax(900px,960px)) ; */
+    /* place-content: center; */
 }
 #homepage{
-    /* background-color:yellow; */
     width:100%;
     margin:0;
     box-sizing: border-box;
+    grid-area:1/1/1/3;
 }
 /*---------------Section I ----------------- */
 #section1{
-    width:100%;
     margin-bottom:30px;
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: space-between;
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(225px,1fr));
 }
 #section1 article{
-    width:225;
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: space-between;
+    display:grid;
+    place-items: center;;
 
 }
 #homepage article figure{
@@ -136,27 +121,24 @@ nav a{
     line-height:1.6em;
 }
 #section3 ul {
-    display:flex;
-    flex-wrap:wrap;
-    align-items: center;
+    display:grid;
+    row-gap: 20px;
 }
 #section3 ul li{
     width:100%;
 }
 #section3 ul li article figure{
     /* width:10%; */
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: space-between;
+    display:grid;
+    grid-template-columns: auto auto;
+    column-gap: 20px;
 }
 #section3 ul li figure img{
     padding:4px;
     border: 1px solid #666666;
 }
 #section3 ul li figcaption{
-    width:50%;
-    padding-left:30px;
-    flex-grow: 1;
+    width:100%;
 }
 #section3 ul li figcaption h2{
     font-size:14px;
@@ -176,9 +158,6 @@ nav a{
     text-align:right;
     color: #FF9900 ;
     background-color: #FFFFFF
-}
-#li1{
-    padding-bottom:30px;
 }
 /*--------------------------- Aside--------------------------- */
 aside{
@@ -204,18 +183,22 @@ aside nav ul li a{
 
 }
 /*--------------------------- Footer--------------------------- */
-footer{
-    width:960px;
-    margin:0 auto;
-    background-color: #333333;
-    display:flex;
+.row3 {
+    background-color: #232323;
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(100px,960px));
+    place-content: center;
+  }
+  footer {
+    display: grid;
+    grid-template-columns: auto auto;
+    /* place-content:center; */
     justify-content: space-between;
-    flex-wrap:wrap;
-    padding:20px 0;
-}
-footer p{
-    font-size:13px;
-}
+  }
+  footer p {
+    font-size: 13px;
+    padding: 20px 0;
+  }
 
 
 /* ------------------------------------- Media Querie -------------------------------------- */
@@ -223,68 +206,78 @@ footer p{
 
 /* ------------------------------------- Mobile -------------------------------------- */
 @media only screen and (max-width: 600px){
-    *{
+    * {
         box-sizing: border-box;
-    }
-    header{
-        width: 100%;
-        flex-direction: column;
-        padding-bottom:0px;
-    }
-    #title{
-        padding-bottom:20px;
-        text-align:center;
-    }
-    header nav{
-        width:100%;
-        padding:0;
-    }
-    header nav ul{
+      }
+      .row1{
         display:block;
-    }
-    header nav ul li{
+      }
+      header {
+        grid-template-columns: auto;
+      }
+      #title {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      #title h1 {
+        font-size: 2em;
+      }
+      header nav {
+        padding: 0;
+      }
+      header nav ul {
+        padding: 0;
+        grid-template-columns: auto;
+      }
+      header nav ul li {
         width:100%;
-        padding: 10px 0;
-        margin-bottom:10px;
+        padding: 10px;
+        margin: 5px;
         border: 1px solid white;
-        text-align:center;
-    }
+        justify-content: center;
+        text-align: center;
+      }
+    
     .container{
+        display:block;
         padding:30px 10px;
         width:100%;
     }
-    #section1{
-        flex-direction: column;
-    }
-    #section1 article{
-        justify-content: center;
+    #homepage{
+        width:100%;
     }
     #homepage #section2 p{
         line-height:1.8em;
         font-size:1em;
         text-align:center;
     } 
-    #section3{
+    #main{
+        width:100%;
+    }
+    #section3 ul{
+        /* grid-template-columns: auto; */
         margin-bottom:30px;
     }
+    #section3 ul li article{
+        width:100%;
+    }
     #section3 ul li article figure{
-        justify-content: center;
+        grid-template-columns: auto;
+        place-items: center;
     }
     #section3 ul li article img{
         margin-bottom:20px;
     }
-    #section3 ul li figcaption{
-        width:100%;
-        padding:0;
+    #section3 ul li article h2{
         text-align:center;
+    }
+    #section3 ul li figcaption{
+        text-align:justify;
     }
 
     aside{
         width:100%;
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        display:grid;
 
     }
     aside h2{
@@ -295,54 +288,61 @@ footer p{
         width:100%;
     }
     aside nav ul li{
-        display:flex;
-        justify-content: center;
-        align-items: center;
+        display:grid;
+        place-items:center;
     }
     aside nav ul li a{
         width:190px;
         border:none;
     }
-    footer{
-        width:100%;
-        flex-direction: column;
-        justify-content: center;
-        text-align:center;
-        padding:10px 30px;
-    }
-    footer p{
-        padding:10px 0;
-    }
+    footer {
+        width: 100%;
+        grid-template-columns: auto;
+        place-content: center;
+        place-items: center;
+        padding: 0 10px;
+      }
 }
 
 /* ------------------------------------- Tablet -------------------------------------- */
 @media only screen and (min-width:601px) and (max-width: 768px)
 {
-    *{
+    * {
         box-sizing: border-box;
-    }
-    header{
+      }
+      header {
         width: 100%;
+        align-items: center;
         flex-direction: column;
-        padding-bottom:0px;
-    }
-    #title{
-        padding-bottom:20px;
-    }
-    header nav{
-        width:100%;
-    }
+        padding-bottom: 0;
+      }
+      #title {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      #title h1 {
+        font-size: 2em;
+      }
+      header nav {
+        width: 100%;
+        padding: 0 50px;
+      }
+      header nav ul {
+        padding: 0;
+        justify-content: space-between;
+      }
+      header nav ul li {
+        padding: 10px;
+      }
+
     .container{
+        display:block;
         padding:30px 30px;
         width:100%;
     }
     #section1{
-        margin-bottom:0;
-    }
-    #section1 article{
-        width:50%;
-        justify-content: center;
-        padding-bottom:30px;
+        grid-template-columns: auto auto;
+        row-gap:30px;
     }
     
     #main{
@@ -353,14 +353,14 @@ footer p{
         margin-bottom:30px;
     }
     #section3 ul li {
-        width:50%;
+        width:100%;
         padding:0 20px;
     }
     #section3 ul li article{
         padding:0;
     }
     #section3 ul li article figure{
-        justify-content: center;
+        place-items: center;
     }
     #section3 ul li article img{
         margin-bottom:20px;
@@ -368,7 +368,7 @@ footer p{
     #section3 ul li figcaption{
         width:100%;
         padding:0;
-        text-align:center;
+        /* text-align:center; */
     }
     
     aside{
@@ -381,22 +381,17 @@ footer p{
     }
     aside nav{
         width:100%;
-        columns: 2;
     }
-    aside nav ul li{
-        display:flex;
-        justify-content: center;
-        /* align-items: center; */
+    aside nav ul{
+        display: grid;
+        grid-template-columns: auto auto;
+        place-items: center;
     }
     aside nav ul li a{
         width:190px;
         border:none;
     }
     footer{
-        width:100%;
-        padding:10px 30px;
-    }
-    footer p{
-        padding:10px 0;
-    }
+    padding: 0 30px;
+  }
 }
